--- a/Capstone02/Views/Home/Index.cshtml
+++ b/Capstone02/Views/Home/Index.cshtml
@@ -7,13 +7,12 @@
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card">
-                <img src="../Images/Logo1.png" class="card-img-top" alt="Image">
+                <img src="C:\Users\msu-wone\Source\Repos\Capstone02\Capstone02\Images\ICENHSHome.JPG" class="card-img-top" alt="ICENHS Logo">
                 <div class="card-body">
-                    <h5 class="card-title">Welcome to Our Website</h5>
+                    <h6 class="card-title">Welcome to Iligan City East National High School Payment System</h6>
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Welcome to the official payment collection system for Iligan City East National High School (ICENHS). Located in Brgy. Sta. Filomena, Iligan City, ICENHS has been providing quality education since 1985, formerly known as Regional Science High School.
                     </p>
-                    <a href="#" class="btn btn-primary">Learn More</a>
                 </div>
             </div>
         </div>
@@ -22,7 +21,7 @@
     <div class="row mt-5">
         <div class="col-md-4">
             <div class="card">
-                <img src="https://placekitten.com/400/300" class="card-img-top" alt="Image">
+                <img src="~/Images/mission.jpg" class="card-img-top" alt="Mission Image">
                 <div class="card-body">
                     <h5 class="card-title">Our Mission</h5>
                     <p class="card-text">
@@ -34,7 +33,7 @@
 
         <div class="col-md-4">
             <div class="card">
-                <img src="https://placekitten.com/401/300" class="card-img-top" alt="Image">
+                <img src="~/Images/services.jpg" class="card-img-top" alt="Services Image">
                 <div class="card-body">
                     <h5 class="card-title">Our Services</h5>
                     <p class="card-text">
@@ -46,7 +45,7 @@
 
         <div class="col-md-4">
             <div class="card">
-                <img src="https://placekitten.com/402/300" class="card-img-top" alt="Image">
+                <img src="~/Images/contact.jpg" class="card-img-top" alt="Contact Image">
                 <div class="card-body">
                     <h5 class="card-title">Contact Us</h5>
                     <p class="card-text">
