--- a/Capstone02/wwwroot/CoreUI/css/style.css
+++ b/Capstone02/wwwroot/CoreUI/css/style.css
@@ -11,7 +11,7 @@
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
+ 
 :root {
   --blue: #20a8d8;
   --indigo: #6610f2;
@@ -68,14 +68,13 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 0.875rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #23282c;
-  text-align: left;
-  background-color: #e4e5e6;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #23282c;
+    text-align: left;
 }
 
 [tabindex="-1"]:focus {
@@ -9126,7 +9125,16 @@ a.text-dark:hover, a.text-dark:focus {
 
 /*
  * Scrollbar thumb styles
- */
+ *
+
+
+
+
+
+
+
+
+
 .ps__thumb-x {
   position: absolute;
   bottom: 2px;
@@ -11553,6 +11561,7 @@ canvas {
   padding: 0;
   color: #fff;
   background: #2f353a;
+  width: 500px;
 }
 
 .sidebar .sidebar-close {
