--- a/Capstone02/wwwroot/css/site.css
+++ b/Capstone02/wwwroot/css/site.css
@@ -1,6 +1,20 @@
 .card {
     border-radius: 15px;
+    border-color: navy;
+    border-width: 3px;
+    
 }
+
+.btn-primary{
+    background-color: navy;
+    border-color: navy;
+}
+
+    .btn-primary:hover {
+        background-color: #001f3f;
+        border-color: #001f3f;
+        color: white;
+    }
 
 h2 {
     font-family: 'Arial Rounded MT'
@@ -13,4 +27,12 @@ h5, h6 {
 .card {
     margin-left: 10px;
     margin-right: 10px;
+}
+
+body {
+    /*background-color: #FFFADD;*/
+}
+
+.custom-checkbox {
+    transform: scale(1.6);
 }
