--- a/Capstone02/Views/Shared/_Layout.cshtml
+++ b/Capstone02/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                 buttons:[
                     'print', 'pdf', 'excel'
                 ],
-                "pageLength": 5,
+                "pageLength": 10,
             });
         });
     </script>
@@ -87,7 +87,7 @@
             <div class="sidebar open">
           <div class="row logo_details">
     <div class="logo_info">
-        <img src="/images/msu-logo.png" alt="E-MSUnity Logo" class="img-fluid logo_image">
+        <img src="/images/Logo1.png" alt="E-MSUnity Logo" class="img-fluid logo_image">
         <div class="logo_name">PTAFee</div>
     </div>
     <i class="bx bx-menu" id="btn"></i>
@@ -162,7 +162,7 @@
                             <span class="link_name">Roles</span>
                         </a>
                         <span class="tooltip">Roles</span>
-                    </li
+                    </li>
                 </ul>
 
                 <partial name="_LoginPartial" />
@@ -211,9 +211,6 @@
                 }
             }
         }
-
-        });
-
     </script>
 
 
