--- a/Capstone02/Views/LearnersAreas/Index.cshtml
+++ b/Capstone02/Views/LearnersAreas/Index.cshtml
@@ -22,11 +22,11 @@
             {
                 <tr>
                     <td>@transaction.TransactionDate.ToString("MM/dd/yyyy")</td>
-                    <td>$@transaction.PTAFee.Amount</td>
+                    <td>₱@transaction.PTAFee.Amount</td>
                 </tr>
             }
         </tbody>
     </table>
 
-    <p>Total Amount Paid for Red Cross Fee: $@ViewBag.TotalAmount</p>
+    <p>Total Amount Paid for Red Cross Fee: ₱@ViewBag.TotalAmount</p>
 </div>
