--- a/Capstone02/Views/Students/Index.cshtml
+++ b/Capstone02/Views/Students/Index.cshtml
@@ -62,6 +62,7 @@
                         <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a>
                         <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a>
                         <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
+                        <a asp-controller="Transactions" asp-action="Create" asp-route-id="@item.Id" class="btn btn-secondary">Pay</a>
                 </td>
             </tr>
     }
