--- a/Capstone02/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Capstone02/Areas/Identity/Pages/Account/Register.cshtml
@@ -7,6 +7,11 @@
 <h1>@ViewData["Title"]</h1>
 
 <style>
+    .card {
+        border-radius: 15px;
+        border-color: navy;
+    }
+
     .slanted-background {
         position: absolute;
         top: 0;
