--- a/Capstone02/wwwroot/css/site.css
+++ b/Capstone02/wwwroot/css/site.css
@@ -22,11 +22,6 @@
     font-family: 'Poppins', sans-serif;
 }
 
-body {
-    /*min-height: 100vh;*/
-    position: relative;
-}
-
 .sidebar {
     min-height: 100vh;
     width: 78px;
@@ -298,7 +293,26 @@ body {
         background: none;
     }
 
+.dropdown .dropdown-menu .dropdown-item:hover {
+    background: transparent;
+    color: #c0ca33;
+}
 
+.dropdown .dropdown-menu .dropdown-item::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    top: 0;
+    width: 5px;
+    background-color: #c0ca33;
+    opacity: 0;
+    transition: opacity 0.2s ease-in;
+}
+
+.dropdown .dropdown-menu .dropdown-item:hover::before {
+    opacity: 1;
+}
 
 .home-section {
     position: absolute;
@@ -391,7 +405,7 @@ td.medium-col {
 }
 
 .logo_image {
-    width: 1px;
+    width: 2px;
     height: auto;
     margin-right: 10px; /* Adjust the margin as needed */
 }
@@ -408,6 +422,11 @@ td.medium-col {
     text-align: center;
     cursor: pointer;
     transition: all .5s ease;
+}
+
+.btn-primary {
+    background-color: navy;
+    border-color: navy;
 }
 
 .logo_details.open .logo_info {
