--- a/Capstone02/Views/Shared/_Layout.cshtml
+++ b/Capstone02/Views/Shared/_Layout.cshtml
@@ -83,15 +83,18 @@
    
     @if (SignInManager.IsSignedIn(User))
     {
+
         <div class="row">
             <div class="sidebar open">
                 <div class="row logo_details">
-                   <div class="logo_info">
+                    <div class="logo_info">
                         <img src="/images/ICENHSLogo.png" alt="ICENHS Logo" class="img-fluid logo_image">
                         <div class="logo_name">PTAFCMS</div>
-                   </div>
-                        <i class="bx bx-menu" id="btn"></i>
+                    </div>
+                    <i class="bx bx-menu" id="btn"></i>
                 </div>
+                @if (User.IsInRole("Admin"))
+                {
                     <ul class="nav-list">
                         <li>
                             <a asp-area="" asp-controller="Home" asp-action="Index">
@@ -108,28 +111,28 @@
                             <span class="tooltip">Employees</span>
                         </li>
                         <li>
-                        <div class="dropdown">
-                            <a class="dropdown-toggle" href="#" role="button" id="ptafeesDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="bx bx-bus-school"></i>
-                                <span class="link_name">PTAFees</span>
-                            </a>
-                            <div class="dropdown-menu ml-5" aria-labelledby="ptafeesDropdown">
-                                <a class="dropdown-item text-white-50" asp-area="" asp-controller="PTAFees" asp-action="Index">All PTAFees</a>
-                                <a class="dropdown-item text-white-50" asp-area="" asp-controller="RedCrosses" asp-action="Index">Red Cross</a>
-                                <a class="dropdown-item text-white-50" asp-area="" asp-controller="PTAMemberships" asp-action="Index">PTA Memberships</a>
-                                <a class="dropdown-item text-white-50" asp-area="" asp-controller="LearnersAreas" asp-action="Index">Learners Areas/Org</a>
-                                <a class="dropdown-item text-white-50" asp-area="" asp-controller="Insurances" asp-action="Index">Insurance</a>
-                                <a class="dropdown-item text-white-50" asp-area="" asp-controller="Publications" asp-action="Index">Publication</a>
-                                <a class="dropdown-item text-white-50" asp-area="" asp-controller="BoyGirlsScouts" asp-action="Index">Boy/Girls Scout</a>
-                                <a class="dropdown-item text-white-50" asp-area="" asp-controller="Anti_TBFundDrive" asp-action="Index">Anti-TB Fund Drive</a>
-                                <a class="dropdown-item text-white-50" asp-area="" asp-controller="RFIDs" asp-action="Index">RF I.D.</a>
-                                <a class="dropdown-item text-white-50" asp-area="" asp-controller="SSGs" asp-action="Index">SSG</a>
-                                <a class="dropdown-item text-white-50" asp-area="" asp-controller="GPTAElectricities" asp-action="Index">GPTA Electricity</a>
-                                <a class="dropdown-item text-white-50" asp-area="" asp-controller="AthleticsSportsFunds" asp-action="Index">Athletics/Sports Fund</a>
-                                <a class="dropdown-item text-white-50" asp-area="" asp-controller="ResearchFunds" asp-action="Index">Research Fund</a>
+                            <div class="dropdown">
+                                <a class="dropdown-toggle" href="#" role="button" id="ptafeesDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <i class="bx bx-bus-school"></i>
+                                    <span class="link_name">PTAFees</span>
+                                </a>
+                                <div class="dropdown-menu ml-5" aria-labelledby="ptafeesDropdown">
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="PTAFees" asp-action="Index">All PTAFees</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="RedCrosses" asp-action="Index">Red Cross</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="PTAMemberships" asp-action="Index">PTA Memberships</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="LearnersAreas" asp-action="Index">Learners Areas/Org</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="Insurances" asp-action="Index">Insurance</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="Publications" asp-action="Index">Publication</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="BoyGirlsScouts" asp-action="Index">Boy/Girls Scout</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="Anti_TBFundDrive" asp-action="Index">Anti-TB Fund Drive</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="RFIDs" asp-action="Index">RF I.D.</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="SSGs" asp-action="Index">SSG</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="GPTAElectricities" asp-action="Index">GPTA Electricity</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="AthleticsSportsFunds" asp-action="Index">Athletics/Sports Fund</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="ResearchFunds" asp-action="Index">Research Fund</a>
+                                </div>
                             </div>
-                        </div>
-                        <span class="tooltip">PTAFees</span>
+                            <span class="tooltip">PTAFees</span>
                         </li>
                         <li>
                             <a asp-area="" asp-controller="Students" asp-action="Index">
@@ -139,11 +142,11 @@
                             <span class="tooltip">Students</span>
                         </li>
                         <li>
-                        <a asp-area="" asp-controller="Parents" asp-action="Index">
-                            <i class="bx bx-history"></i>
-                            <span class="link_name">Parents</span>
-                        </a>
-                        <span class="tooltip">Parents</span>
+                            <a asp-area="" asp-controller="Parents" asp-action="Index">
+                                <i class="bx bx-history"></i>
+                                <span class="link_name">Parents</span>
+                            </a>
+                            <span class="tooltip">Parents</span>
                         </li>
                         <li>
                             <a asp-area="" asp-controller="Transactions" asp-action="Index">
@@ -167,6 +170,78 @@
                             <span class="tooltip">Parent's Interface</span>
                         </li>
                     </ul>
+                }
+                else
+                {
+                    <ul class="nav-list">
+                        <li>
+                            <a asp-area="" asp-controller="Home" asp-action="Index">
+                                <i class="bx bxs-dashboard"></i>
+                                <span class="link_name">Dashboard</span>
+                            </a>
+                            <span class="tooltip">Dashboard</span>
+                        </li>
+                        <li>
+                            <div class="dropdown">
+                                <a class="dropdown-toggle" href="#" role="button" id="ptafeesDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <i class="bx bx-bus-school"></i>
+                                    <span class="link_name">PTAFees</span>
+                                </a>
+                                <div class="dropdown-menu ml-5" aria-labelledby="ptafeesDropdown">
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="PTAFees" asp-action="Index">All PTAFees</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="RedCrosses" asp-action="Index">Red Cross</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="PTAMemberships" asp-action="Index">PTA Memberships</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="LearnersAreas" asp-action="Index">Learners Areas/Org</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="Insurances" asp-action="Index">Insurance</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="Publications" asp-action="Index">Publication</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="BoyGirlsScouts" asp-action="Index">Boy/Girls Scout</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="Anti_TBFundDrive" asp-action="Index">Anti-TB Fund Drive</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="RFIDs" asp-action="Index">RF I.D.</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="SSGs" asp-action="Index">SSG</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="GPTAElectricities" asp-action="Index">GPTA Electricity</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="AthleticsSportsFunds" asp-action="Index">Athletics/Sports Fund</a>
+                                    <a class="dropdown-item text-white-50" asp-area="" asp-controller="ResearchFunds" asp-action="Index">Research Fund</a>
+                                </div>
+                            </div>
+                            <span class="tooltip">PTAFees</span>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="Students" asp-action="Index">
+                                <i class="bx bx-history"></i>
+                                <span class="link_name">Students</span>
+                            </a>
+                            <span class="tooltip">Students</span>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="Parents" asp-action="Index">
+                                <i class="bx bx-history"></i>
+                                <span class="link_name">Parents</span>
+                            </a>
+                            <span class="tooltip">Parents</span>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="Transactions" asp-action="Index">
+                                <i class="bx bxs-inbox"></i>
+                                <span class="link_name">Transactions</span>
+                            </a>
+                            <span class="tooltip">Transactions</span>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="Roles" asp-action="Index">
+                                <i class="bx bxs-inbox"></i>
+                                <span class="link_name">Roles</span>
+                            </a>
+                            <span class="tooltip">Roles</span>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="ParentUI" asp-action="Index">
+                                <i class="bx bxs-inbox"></i>
+                                <span class="link_name">Parent's Interface</span>
+                            </a>
+                            <span class="tooltip">Parent's Interface</span>
+                        </li>
+                    </ul>
+                }
                 <partial name="_LoginPartial" />
             </div>
             <section class="home-section">
