--- a/Capstone02/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Capstone02/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,8 +1,10 @@
 ﻿@page
-@{
-    Layout = "/Views/Shared/_Layout.cshtml";
-}
+@using Capstone02.Areas.Identity.Pages.Account;
 @model LoginModel
+
+@*@{
+    Layout = "/Views/Shared/_Layout.cshtml";
+}*@
 
 <style>
     body {
@@ -10,11 +12,13 @@
         background-size: cover;
         height: 100vh;
         margin: 0px;
+        width: 100%;
+        background-color: green;
     }
 
     .card {
         border-radius: 15px;
-        border-color: navy;
+        border-color: red;
         border-width: 4px;
     }
 
@@ -26,6 +30,7 @@
         height: 100%;
         background: linear-gradient(navy 100%, transparent 50%);
         z-index: -1;
+        border-color:transparent;
     }
 
 </style>
