--- a/Capstone02/Views/Employees/Create.cshtml
+++ b/Capstone02/Views/Employees/Create.cshtml
@@ -70,6 +70,13 @@
                                 <span asp-validation-for="Position" class="text-danger"></span>
                             </div>
                         </div>
+                        <div class="row mb-3">
+                            <div class="col-md-6 mb-3">
+                                <h6 class="form-label">Password</h6>
+                                <input asp-for="Password" class="form-control" />
+                                <span asp-validation-for="Type" class="text-danger"></span>
+                            </div>
+                        </div>
 
                         <div class="row mb-3">
                             <div class="col-md-12 mb-3">
